# fencerunner

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
catalogs/: cfbo-v1.json  defaults.json
docs/: AGENTS.md  boundary-object.md  boundary_object.md  capabilities.md  probes.md
docs/data/: probe_cap_coverage_map.json
probes/: AGENTS.md  agent_approvals_mode_env.sh  agent_command_trust_file_read.sh  agent_default_sandbox_env.sh  agent_sandbox_env_marker.sh  fs_git_like_name_write.sh  fs_git_metadata_read_config.sh  fs_git_metadata_write_guard.sh  fs_outside_workspace.sh  fs_read_system_library_ls.sh  fs_read_system_version_plist.sh  fs_read_workspace_readme.sh  fs_read_workspace_spec_tail.sh  fs_symlink_bounce_write.sh  fs_symlink_escape_read.sh  fs_symlink_escape_relative_read.sh  fs_symlink_workspace_self_ref_write_ok.sh  fs_user_desktop_symlink_read.sh  fs_user_documents_read.sh  fs_user_library_write_guard.sh  fs_workspace_relative_escape_read_guard.sh  fs_workspace_relative_segments_read_ok.sh  fs_workspace_relative_segments_write_ok.sh  fs_workspace_unicode_filename_write_ok.sh  fs_workspace_write_create.sh  mach_system_logger_write.sh  net_disabled_env_tag.sh  net_localhost_ipv6_loopback_ok.sh  net_localhost_loopback.sh  net_localhost_udp_echo.sh  net_outbound_example_http_head.sh  net_outbound_example_https.sh  net_outbound_ipv4_literal_denied.sh  proc_exec_env_python3.sh  proc_exec_toolchain_clang_version.sh  proc_exec_toolchain_python3.sh  proc_fork_child_spawn.sh  proc_unsandboxed_escalation_retry.sh  sandbox_debug_log_capture.sh  sandbox_default_deny_ps.sh  (+6 more)
probes/agent_policy/: agent_approvals_mode_env.sh
probes/filesystem/: fs_git_like_name_write.sh  fs_git_metadata_write_guard.sh  fs_read_system_library_ls.sh  fs_read_system_version_plist.sh  fs_read_workspace_spec_tail.sh  fs_symlink_escape_read.sh  fs_symlink_workspace_self_ref_write_ok.sh  fs_user_desktop_symlink_read.sh  fs_user_documents_read.sh  fs_user_library_write_guard.sh  fs_workspace_relative_escape_read_guard.sh  fs_workspace_relative_segments_read_ok.sh  fs_workspace_relative_segments_write_ok.sh  fs_workspace_unicode_filename_write_ok.sh  fs_workspace_write_create.sh
probes/network/: net_disabled_env_tag.sh
probes/process/: proc_exec_toolchain_clang_version.sh
probes/sysctl/: sysctl_hw_ncpu_read.sh  sysctl_security_mac_proc_enforce.sh
schema/: boundary-object-cfbo-v2.json  boundary-object-v0.json  boundary-object-v1.json  boundary_object.json  boundary_object_cfbo_v1.json  boundary_object_schema.json
spec/: AGENTS.md  capabilities-coverage.json  capabilities.yaml
src/: AGENTS.md  connectors.rs  coverage.rs  emit_support.rs  fence_run_support.rs  lib.rs  metadata_validation.rs  probe_metadata.rs  runtime.rs  schema_loader.rs
src/boundary/: mod.rs
src/catalog/: identity.rs  index.rs  mod.rs  model.rs  repository.rs
tests/: AGENTS.md  boundary_object_schema.sh  capability_map_sync.sh  harness_smoke.sh  run.sh  second_tier.rs  static_probe_contract.sh  suite.rs
tests/audits/: AGENTS.md
tests/fixtures/: probe_fixture.sh
tests/lib/: utils.sh
tests/mocks/: cfbo-golden-snippet.ndjson
tests/probe_contract/: static_probe_contract.sh
tests/second_tier/: baseline_no_codex_smoke.sh  boundary_object_schema.sh  capability_map_sync.sh  harness_smoke.sh
tests/shims/: minimal_probe.sh
tools/: AGENTS.md  adapt_capabilities.sh  capabilities_adapter.sh  generate_probe_coverage_map.sh  generate_probe_manifest.rb  list_run_modes.sh  resolve_paths.sh  sync_bin_helpers.sh  validate_capabilities.sh  validate_contract_gate.sh
(+49 files in other folders)
