[package]
name = "codex-fence"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"

 [dev-dependencies]
 jsonschema = "0.17"

[[bin]]
name = "fence-bang"
path = "src/bin/fence_bang.rs"

[[bin]]
name = "fence-listen"
path = "src/bin/fence_listen.rs"

[[bin]]
name = "fence-test"
path = "src/bin/fence_test.rs"

[[bin]]
name = "portable-path"
path = "src/bin/portable_path.rs"

[[bin]]
name = "emit-record"
path = "src/bin/emit_record.rs"

[[bin]]
name = "detect-stack"
path = "src/bin/detect_stack.rs"

[[bin]]
name = "fence-run"
path = "src/bin/fence_run.rs"

[[bin]]
name = "codex-fence"
path = "src/bin/codex_fence.rs"

[[bin]]
name = "json-extract"
path = "src/bin/json_extract.rs"
