[package]
name = "codex-fence"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Empirical sandbox probe harness for the codex CLI: hammers on sandbox boundaries and records every observation as JSON."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Protonk/codex-fence"
default-run = "codex-fence"
build = "build.rs"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"

 [dev-dependencies]
 jsonschema = "0.17"

[[bin]]
name = "fence-bang"
path = "src/bin/fence_bang.rs"
test = false

[[bin]]
name = "fence-listen"
path = "src/bin/fence_listen.rs"
test = false

[[bin]]
name = "fence-test"
path = "src/bin/fence_test.rs"
test = false

[[bin]]
name = "portable-path"
path = "src/bin/portable_path.rs"
test = false

[[bin]]
name = "emit-record"
path = "src/bin/emit_record.rs"
test = false

[[bin]]
name = "detect-stack"
path = "src/bin/detect_stack.rs"
test = false

[[bin]]
name = "fence-run"
path = "src/bin/fence_run.rs"
test = false

[[bin]]
name = "codex-fence"
path = "src/bin/codex_fence.rs"
test = false

[[bin]]
name = "json-extract"
path = "src/bin/json_extract.rs"
test = false
