[package]
name = "fencerunner"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "Portable sandbox probe harness: hammers on sandbox boundaries and records every observation as JSON."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Protonk/fencerunner"
default-run = "probe"
# No build script; repository paths are discovered at runtime via FENCE_ROOT.

[lib]
name = "fencerunner"
doctest = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
libc = "0.2"
jsonschema = "0.17"

 [dev-dependencies]

[[bin]]
name = "probe-matrix"
path = "src/bin/probe_matrix.rs"
test = false

[[bin]]
name = "probe-target"
path = "src/bin/probe_target.rs"
test = false

[[bin]]
name = "probe-listen"
path = "src/bin/probe_listen.rs"
test = false

[[bin]]
name = "probe-gate"
path = "src/bin/probe_gate.rs"
test = false

[[bin]]
name = "portable-path"
path = "src/bin/portable_path.rs"
test = false

[[bin]]
name = "emit-record"
path = "src/bin/emit_record.rs"
test = false

[[bin]]
name = "detect-stack"
path = "src/bin/detect_stack.rs"
test = false

[[bin]]
name = "probe-exec"
path = "src/bin/probe_exec.rs"
test = false

[[bin]]
name = "probe"
path = "src/bin/probe_cli.rs"
test = false

[[bin]]
name = "json-extract"
path = "src/bin/json_extract.rs"
test = false

[[bin]]
name = "paging-stress"
path = "src/bin/paging_stress.rs"
test = false
